--- a/app/src/main/res/layout/activity_news_info.xml
+++ b/app/src/main/res/layout/activity_news_info.xml
@@ -7,6 +7,10 @@
     android:layout_height="match_parent"
     android:background="@android:color/white">
 
+    <include
+        layout="@layout/toolbar_main"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -17,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="45dp"
             android:layout_marginStart="28dp"
-            android:layout_marginTop="47dp"
+            android:layout_marginTop="90dp"
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="511dp"
             android:text="Nestanak električne energije" />
