NewsInfo, News fitter and contact form

--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -8,6 +8,14 @@
         android:icon="@drawable/ic_power_black_24dp"
         android:title="Eletricity news"/>
 
+    <item android:id="@+id/road_news"
+        android:icon="@drawable/ic_directions_black_24dp"
+        android:title="Road news"/>
+
+    <item android:id="@+id/water_news"
+        android:icon="@drawable/ic_invert_colors_black_24dp"
+        android:title="Water news"/>
+
     <item android:id="@+id/settings"
         android:icon="@drawable/ic_settings_black_24dp"
         android:title="Settings"/>
