--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -15,22 +15,26 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="0dp"
         android:layout_marginTop="90dp"
-        android:layout_marginEnd="0dp"
-        android:weightSum="100">
+        android:layout_marginEnd="0dp">
 
         <Button
             android:id="@+id/call_water"
-            android:drawableStart="@android:drawable/ic_menu_call"
+            android:drawableLeft="@android:drawable/ic_menu_call"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="50"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="50dp"
             android:text="Water"/>
-
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="150dp"
+        android:layout_marginEnd="0dp">
         <Button
             android:id="@+id/call_electricity"
-            android:drawableStart="@android:drawable/ic_menu_call"
+            android:drawableLeft="@android:drawable/ic_menu_call"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="50"
@@ -42,29 +46,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="350dp"
-        android:weightSum="100">
-
-        <TextView
-            android:layout_width="120dp"
-            android:layout_height="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_weight="50"
-            android:text="From:" />
-
-        <EditText
-            android:layout_width="250dp"
-            android:layout_height="60dp"
-            android:layout_marginRight="35dp"
-            android:layout_marginLeft="40dp"
-            android:layout_weight="50"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="270dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="284dp"
         android:weightSum="100">
 
         <TextView
@@ -76,18 +61,19 @@
 
         <Spinner
             android:id="@+id/spinner1"
-            android:layout_width="wrap_content"
+            android:layout_width="118dp"
             android:layout_height="wrap_content"
-            android:layout_weight="40"
             android:layout_marginLeft="80dp"
             android:layout_marginRight="25dp"
-            android:entries="@array/emails_array"/>
+            android:layout_weight="40"
+            android:entries="@array/emails_array" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="190dp"
+        android:layout_marginBottom="334dp"
         android:weightSum="100">
 
         <TextView
@@ -98,10 +84,11 @@
             android:text="Subject:" />
 
         <EditText
+            android:id="@+id/mailSubject"
             android:layout_width="250dp"
             android:layout_height="60dp"
-            android:layout_marginRight="35dp"
             android:layout_marginLeft="50dp"
+            android:layout_marginRight="35dp"
             android:layout_weight="50" />
     </LinearLayout>
 
@@ -109,7 +96,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="154dp"
         android:weightSum="100">
 
         <TextView
@@ -119,10 +106,26 @@
             android:text="Compose mail:" />
 
         <EditText
+            android:id="@+id/mailMessage"
             android:layout_width="201dp"
             android:layout_height="150dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="30dp"
             android:inputType="textMultiLine" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="60dp"
+        android:weightSum="100">
+
+        <Button
+            android:id="@+id/send_mail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="50dp"
+            android:text="Send" />
     </LinearLayout>
 </RelativeLayout>
