--- a/app/src/main/res/layout/activity_news_info.xml
+++ b/app/src/main/res/layout/activity_news_info.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/news_info"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,49 +10,6 @@
         layout="@layout/toolbar_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-
-        <TextView
-            android:id="@+id/news_info_title"
-            android:layout_width="wrap_content"
-            android:layout_height="45dp"
-            android:layout_marginStart="28dp"
-            android:layout_marginTop="90dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginBottom="511dp"
-            android:text="Nestanak električne energije" />
-
-        <TextView
-            android:id="@+id/news_info_text"
-            android:layout_width="354dp"
-            android:layout_height="131dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="29dp"
-            android:layout_marginEnd="28dp"
-            android:layout_marginBottom="368dp"
-            android:text="  U periodu od 01.01.2019. do 05.01.2019. godine u ulici Vase
-Stajica doći će do nestanka električne energije." />
-
-        <com.google.android.gms.maps.MapView
-            android:id="@+id/mapView"
-            android:layout_width="wrap_content"
-            android:layout_height="296dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="25dp"
-            android:layout_marginTop="257dp"
-            android:layout_marginEnd="35dp"
-            android:layout_marginBottom="50dp" />
-
-    </RelativeLayout>
-
     <android.support.design.widget.NavigationView
         android:id="@+id/nv"
         android:layout_width="match_parent"
@@ -63,6 +19,57 @@ Stajica doći će do nestanka električne energije." />
         app:menu="@menu/navigation_menu">
 
     </android.support.design.widget.NavigationView>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/news_info_title"
+            android:layout_width="wrap_content"
+            android:layout_height="65dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="90dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="511dp"
+             />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/news_info_image"
+                android:layout_width="wrap_content"
+                android:layout_height="100dp"
+                android:layout_marginStart="28dp"
+                android:layout_marginTop="190dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginBottom="411dp"
+                android:scaleType="centerCrop"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/news_info_text"
+                android:layout_width="354dp"
+                android:layout_height="202dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="29dp"
+                android:layout_marginTop="342dp"
+                android:layout_marginEnd="38dp"
+                android:layout_marginBottom="258dp" />
+        </LinearLayout>
+
+    </RelativeLayout>
+
+
 
 
 </android.support.v4.widget.DrawerLayout>
