--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,16 +1,42 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/design_default_color_primary</item>
-        <item name="colorPrimaryDark">@color/design_default_color_primary</item>
-        <item name="colorAccent">@color/design_default_color_primary</item>
+    <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:colorButtonNormal">@color/colorPrimary</item>
+        <item name="android:windowBackground">@color/colorBackground</item>
     </style>
-    <style name="toolbar_style">
-        <item name="theme">@style/ThemeOverlay.AppCompat.Dark</item>
-        <item name="titleMarginTop">20dp</item>
-        <item name="android:background">?colorPrimary</item>
-        <item name="android:elevation">4dp</item>
+
+    <!-- App theme without action bar -->
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
+
+    <style name="AppTheme.GREEN" parent="AppTheme.NoActionBar">
+        <item name="colorPrimary">@color/colorGreen</item>
+        <item name="colorPrimaryDark">@color/colorGreenDark</item>
+        <item name="colorAccent">@color/colorGreenAccent</item>
+        <item name="android:colorButtonNormal">@color/colorGreen</item>
+        <item name="android:windowBackground">@color/colorGreenBackground</item>
+    </style>
+
+    <style name="AppTheme.PURPLE" parent="AppTheme.NoActionBar">
+        <item name="colorPrimary">@color/colorPurple</item>
+        <item name="colorPrimaryDark">@color/colorPurpleDark</item>
+        <item name="colorAccent">@color/colorPurpleAccent</item>
+        <item name="android:colorButtonNormal">@color/colorPurple</item>
+        <item name="android:windowBackground">@color/colorPurpleBackground</item>
+    </style>
+
+    <style name="AppTheme.RED" parent="AppTheme.NoActionBar">
+        <item name="colorPrimary">@color/colorRed</item>
+        <item name="colorPrimaryDark">@color/colorRedDark</item>
+        <item name="colorAccent">@color/colorRedAccent</item>
+        <item name="android:colorButtonNormal">@color/colorRed</item>
+        <item name="android:windowBackground">@color/colorRedBackground</item>
+    </style>
+
 </resources>
