--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".CalendarActivity">
 
-
     <CalendarView
         android:id="@+id/calendarView"
         android:layout_width="wrap_content"
@@ -35,8 +34,8 @@
             android:layout_marginTop="100dp"
             android:layout_marginEnd="50dp"
             android:layout_marginBottom="10dp"
-
             android:text="@string/buttonConfirm"
+            android:textColor="@color/colorWhite"
             app:layout_constraintBottom_toTopOf="@+id/map"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -51,7 +50,7 @@
             android:layout_marginTop="100dp"
             android:layout_marginEnd="50dp"
             android:layout_marginBottom="10dp"
-
+            android:textColor="@color/colorWhite"
             android:text="@string/buttonCancel"
             app:layout_constraintBottom_toTopOf="@+id/map"
             app:layout_constraintEnd_toEndOf="parent"
