--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -10,6 +10,7 @@
         layout="@layout/toolbar_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -24,14 +25,17 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="50dp"
-            android:text="Water"/>
+            android:text="Water"
+            android:textColor="@color/colorWhite"/>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="0dp"
         android:layout_marginTop="150dp"
         android:layout_marginEnd="0dp">
+
         <Button
             android:id="@+id/call_electricity"
             android:drawableLeft="@android:drawable/ic_menu_call"
@@ -40,7 +44,8 @@
             android:layout_weight="50"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="50dp"
-            android:text="Electricity" />
+            android:text="Electricity"
+            android:textColor="@color/colorWhite"/>
     </LinearLayout>
 
     <LinearLayout
@@ -57,7 +62,8 @@
             android:layout_height="20dp"
             android:layout_marginLeft="20dp"
             android:layout_weight="60"
-            android:text="To:" />
+            android:text="To:"
+            android:textColor="@color/colorBlackDark"/>
 
         <Spinner
             android:id="@+id/spinner1"
@@ -81,7 +87,8 @@
             android:layout_height="20dp"
             android:layout_marginLeft="20dp"
             android:layout_weight="50"
-            android:text="Subject:" />
+            android:text="Subject:"
+            android:textColor="@color/colorBlackDark"/>
 
         <EditText
             android:id="@+id/mailSubject"
@@ -103,7 +110,8 @@
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:layout_marginLeft="20dp"
-            android:text="Compose mail:" />
+            android:text="Compose mail:"
+            android:textColor="@color/colorBlackDark"/>
 
         <EditText
             android:id="@+id/mailMessage"
@@ -113,6 +121,7 @@
             android:layout_marginRight="30dp"
             android:inputType="textMultiLine" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -126,6 +135,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="50dp"
-            android:text="Send" />
+            android:text="Send"
+            android:textColor="@color/colorWhite"/>
     </LinearLayout>
+
 </RelativeLayout>
