--- a/app/src/main/res/layout/adapter_view_layout.xml
+++ b/app/src/main/res/layout/adapter_view_layout.xml
@@ -10,6 +10,7 @@
         android:gravity="center"
         android:textAlignment="center"
         android:text="TextView1"
+        android:textColor="@color/colorBlackDark"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:id="@+id/textView1"
@@ -24,6 +25,7 @@
         <TextView
             android:gravity="center"
             android:text="TextView2"
+            android:textColor="@color/colorBlackDark"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:id="@+id/textView2"/>
