--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -5,18 +5,21 @@
         android:id="@+id/home_toolbar"
         android:icon="@drawable/ic_home_black_24dp"
         app:showAsAction="ifRoom"
-        android:title="Home">
+        android:title="Home"
+        android:tooltipText="@color/colorWhite">
     </item>
     <item
         android:id="@+id/map_toolbar"
         android:icon="@drawable/ic_place_black_24dp"
         app:showAsAction="ifRoom|withText"
-        android:title="Map">
+        android:title="Map"
+        android:titleCondensed="@color/colorWhite">
     </item>
     <item
         android:id="@+id/notification_toolbar"
         android:icon="@drawable/ic_notifications_black_24dp"
         app:showAsAction="ifRoom|withText"
-        android:title="Notification">
+        android:title="Notification"
+        android:textColor="@color/colorWhite">
     </item>
 </menu>
