--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#3f51b5</color>
+    <color name="colorPrimaryDark">#304ffe</color>
+    <color name="colorAccent">#536dfe</color>
+    <color name="colorBackground">#e3f2fd</color>
+
+    <color name="colorGreen">#009688</color>
+    <color name="colorGreenDark">#00bfa5</color>
+    <color name="colorGreenAccent">#00bfa5</color>
+    <color name="colorGreenBackground">#e0f2f1</color>
+
+    <color name="colorPurple">#7b1fa2</color>
+    <color name="colorPurpleDark">#aa00ff</color>
+    <color name="colorPurpleAccent">#e040fb</color>
+    <color name="colorPurpleBackground">#f3e5f5</color>
+
+    <color name="colorRed">#b71c1c</color>
+    <color name="colorRedDark">#d50000</color>
+    <color name="colorRedAccent">#ff5252</color>#ffebee
+    <color name="colorRedBackground">#ffebee</color>
+
+    <color name="colorWhite">#fafafa</color>
+    <color name="colorBlackDark">#212121</color>
 </resources>
