--- a/app/src/main/res/layout-land/activity_settings.xml
+++ b/app/src/main/res/layout-land/activity_settings.xml
@@ -16,7 +16,8 @@
         android:layout_marginStart="0dp"
         android:layout_marginTop="70dp"
         android:layout_marginEnd="0dp"
-        android:weightSum="100">
+        android:weightSum="100"
+        android:id="@+id/locationOnOff">
 
         <TextView
             android:layout_width="wrap_content"
@@ -38,7 +39,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="150dp"
+        android:layout_below="@+id/locationOnOff"
+        android:layout_marginTop="17dp"
         android:weightSum="100">
 
         <TextView
@@ -47,21 +49,24 @@
             android:layout_marginLeft="20dp"
             android:layout_weight="50"
             android:text="Location radius:" />
+
         <SeekBar
             android:id="@+id/simpleSeekBar"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_weight="50"
-            android:progress="50"
+            android:layout_marginLeft="40dp"
             android:layout_marginRight="35dp"
-            android:layout_marginLeft="40dp"/>
+            android:layout_weight="50"
+
+            android:progress="50" />
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="300dp"
+        android:layout_marginBottom="91dp"
         android:weightSum="100">
 
         <TextView
@@ -74,32 +79,34 @@
 
         <RadioGroup
             android:id="@+id/radioLayout"
-            android:layout_width="wrap_content"
+            android:layout_width="1dp"
             android:layout_height="wrap_content"
             android:layout_weight="60"
             android:orientation="horizontal">
+
             <RadioButton
                 android:id="@+id/radioGrid"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="30dp"
-                android:text="Grid"
-                 />
+                android:text="Grid" />
+
             <RadioButton
                 android:id="@+id/radioList"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="78dp"
-                android:text="List"
-                android:checked="true" />
+                android:checked="true"
+                android:text="List" />
         </RadioGroup>
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="230dp"
+        android:layout_marginBottom="151dp"
         android:weightSum="100">
 
         <TextView
@@ -115,27 +122,30 @@
             android:layout_height="wrap_content"
             android:layout_weight="60"
             android:orientation="horizontal">
+
             <RadioButton
                 android:id="@+id/radioDark"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp"
-                android:text="Dark"
-                android:checked="true" />
+                android:layout_marginLeft="110dp"
+                android:checked="true"
+                android:text="Dark" />
+
             <RadioButton
                 android:id="@+id/radioLight"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="80dp"
-                android:text="Light"
-                android:checked="true" />
+                android:layout_marginLeft="75dp"
+                android:checked="true"
+                android:text="Light" />
         </RadioGroup>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="160dp"
+        android:layout_marginBottom="35dp"
         android:weightSum="100">
 
         <TextView
@@ -144,22 +154,24 @@
             android:layout_marginLeft="20dp"
             android:layout_weight="33.3"
             android:text="Notification:" />
+
         <CheckBox
             android:id="@+id/sound"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:checked="false"
             android:layout_marginLeft="50dp"
-           android:layout_weight="33.3"
-            android:text="Sound"/>
+            android:layout_weight="33.3"
+            android:checked="false"
+            android:text="Sound" />
+
         <CheckBox
             android:id="@+id/vibration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:checked="true"
-            android:layout_weight="33.3"
             android:layout_marginLeft="50dp"
-            android:text="Vibration"/>
+            android:layout_weight="33.3"
+            android:checked="true"
+            android:text="Vibration" />
 
     </LinearLayout>
 </RelativeLayout>
