--- a/app/src/main/res/layout/activity_news_info.xml
+++ b/app/src/main/res/layout/activity_news_info.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <android.support.design.widget.NavigationView
-        android:id="@+id/nv"
+        android:id="@+id/news_info_nav"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="start"
