--- a/app/src/main/res/layout/notification_fragment.xml
+++ b/app/src/main/res/layout/notification_fragment.xml
@@ -11,5 +11,5 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="0dp"
-        android:layout_marginTop="60dp"></ListView>
+        ></ListView>
 </RelativeLayout>
