--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -36,7 +36,7 @@
             android:layout_marginBottom="10dp"
             android:text="@string/buttonConfirm"
             android:textColor="@color/colorWhite"
-            app:layout_constraintBottom_toTopOf="@+id/map"
+            app:layout_constraintBottom_toTopOf="@+id/mappp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +52,7 @@
             android:layout_marginBottom="10dp"
             android:textColor="@color/colorWhite"
             android:text="@string/buttonCancel"
-            app:layout_constraintBottom_toTopOf="@+id/map"
+            app:layout_constraintBottom_toTopOf="@+id/mappp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
