--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -26,6 +26,7 @@
             android:text="Location:"
             android:textColor="@color/colorBlackDark"/>
         <android.support.v7.widget.SwitchCompat
+            android:id="@+id/switchLocation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="50"
@@ -150,6 +151,7 @@
             android:textColor="@color/colorBlackDark"/>
 
         <CheckBox
+            android:id= "@+id/sound"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="false"
@@ -158,6 +160,7 @@
             android:text="Sound"
             android:textColor="@color/colorBlackDark"/>
         <CheckBox
+            android:id= "@+id/vibration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="true"
