--- a/app/src/main/res/layout-land/activity_contact.xml
+++ b/app/src/main/res/layout-land/activity_contact.xml
@@ -12,38 +12,43 @@
         android:layout_height="wrap_content"/>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="366dp"
         android:layout_height="wrap_content"
+
+        android:layout_alignParentEnd="true"
         android:layout_marginStart="0dp"
-        android:layout_marginTop="90dp"
-        android:layout_marginEnd="0dp">
+        android:layout_marginTop="42dp"
+        android:layout_marginEnd="365dp">
 
         <Button
             android:id="@+id/call_water"
-            android:drawableLeft="@android:drawable/ic_menu_call"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="50dp"
-            android:text="Water"/>
+            android:drawableLeft="@android:drawable/ic_menu_call"
+            android:text="Water" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="366dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="150dp"
-        android:layout_marginEnd="0dp">
+
+
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="364dp"
+        android:layout_marginTop="42dp"
+        android:layout_marginEnd="1dp">
 
         <Button
             android:id="@+id/call_electricity"
-            android:drawableLeft="@android:drawable/ic_menu_call"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="50"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="50dp"
-            android:text="Electricity"/>
+            android:layout_weight="50"
+            android:drawableLeft="@android:drawable/ic_menu_call"
+            android:text="Electricity" />
     </LinearLayout>
 
     <LinearLayout
@@ -52,7 +57,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="0dp"
-        android:layout_marginTop="284dp"
+        android:layout_marginTop="152dp"
         android:weightSum="100">
 
         <TextView
@@ -60,7 +65,7 @@
             android:layout_height="20dp"
             android:layout_marginLeft="20dp"
             android:layout_weight="60"
-            android:text="To:"/>
+            android:text="To:" />
 
         <Spinner
             android:id="@+id/spinner1"
@@ -75,8 +80,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="334dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="192dp"
         android:weightSum="100">
 
         <TextView
@@ -84,7 +91,7 @@
             android:layout_height="20dp"
             android:layout_marginLeft="20dp"
             android:layout_weight="50"
-            android:text="Subject:"/>
+            android:text="Subject:" />
 
         <EditText
             android:id="@+id/mailSubject"
@@ -96,17 +103,19 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="344dp"
+        android:layout_height="114dp"
+        android:weightSum="100"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="154dp"
-        android:weightSum="100">
+        android:layout_marginTop="154dp"
+        android:layout_marginBottom="76dp">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="207dp"
             android:layout_height="20dp"
             android:layout_marginLeft="20dp"
-            android:text="Compose mail:"/>
+            android:layout_weight="50"
+            android:text="Compose mail:" />
 
         <EditText
             android:id="@+id/mailMessage"
@@ -114,14 +123,15 @@
             android:layout_height="150dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="30dp"
-            android:inputType="textMultiLine" />
+            android:layout_weight="50"
+             />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="16dp"
         android:weightSum="100">
 
         <Button
@@ -130,7 +140,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="50dp"
-            android:text="Send"/>
+            android:text="Send" />
     </LinearLayout>
 
 </RelativeLayout>
